Changed everything so that it has  learner and tutor login/register functions. Changed styles.

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
 
 
     <div style="display: flex; justify-content: center; align-items: center; gap: 20px;">
-        <form class="card" action="/home" method="post" name="login">
+        <form class="card" action="/home-tutor" method="post" name="login">
             <span>Login For Tutors</span>
         
             <input type="text" name="Username" placeholder="Username" autofocus autocomplete="off">
@@ -53,7 +53,7 @@
 
 
 
-        <form class="card" action="/home" method="post" name="login">
+        <form class="card" action="/home-learner" method="post" name="login">
             <span>Login For Learners</span>
         
             <input type="text" name="Username" placeholder="Username" autofocus autocomplete="off">
