--- a/templates/reset_learner.html
+++ b/templates/reset_learner.html
@@ -22,7 +22,7 @@
         <h3>You will need to login with your new password after changing it.</h3>
 
     <form
-    action="/phrasereset"
+    action="/phrasereset-learner"
     method="post"
     name="reset">
     
