--- a/templates/update_learner.html
+++ b/templates/update_learner.html
@@ -15,7 +15,7 @@
         <h1 style="font-size: 50px;">Update Page</h1>
         
 
-<form action="/update"
+<form action="/update-learner"
     method="post"
     name="update"> <!--This is a form that is used to update a user's account information-->
 
@@ -32,7 +32,7 @@
     <button style="font-size: 30px;" type="submit">Update</button>
 
 
-</form>
+    </form>
 
 </body>
 
