--- a/static/styles.css
+++ b/static/styles.css
@@ -122,22 +122,6 @@ input {
     text-align: center;
 }
 
-.scheme {
-    height: 20px;
-    width: 20px;
-}
-
-.scheme-button {
-    border: 0;
-    border-radius: 10px;
-    padding: 10px 20px;;
-    color: black;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 35px;
-    position:relative;
-}
-
 
 /* For classes/schedule */
 
@@ -151,4 +135,24 @@ input {
     font-size: 45px;
     position: absolute;
     background-color: #ccc;
+}
+
+
+/* For 'Go Back' buttons */
+
+.goback_black {
+    background-color:black; 
+    border: 0;
+    border-radius: 10px;
+    font-size: 30px;
+    cursor: pointer;
+    color: white;
+}
+
+.goback_white {
+    background-color:white; 
+    border-radius: 20px;
+    font-size: 30px;
+    cursor: pointer;
+    color: black
 }
