--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -39,7 +39,7 @@ action="/logout"
 name="logout"> <!--This is a form that is used to log out a user, as well as clearing session variables-->
 
 
-<button style="font-size: 30px;" type="submit">Back To Log In Page</button>
+<button style="font-size: 30px;" type="submit">Go Back</button>
 
 </form>
 
