--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -35,10 +35,10 @@
     <form
     action="/logout"
     name="logout"> <!--This is a form that is used to log out a user, as well as clearing session variables-->
-
-
-    <button style="font-size: 30px;" type="submit">Back To Log In Page</button>
-
+    
+    
+    <button style="font-size: 30px;" type="submit">Go Back</button>
+    
     </form>
     
 </html>
