Added confirm button

--- a/templates/accessibility.html
+++ b/templates/accessibility.html
@@ -21,6 +21,9 @@
         <p>-<input type="range" aria-valuemin="0" aria-valuemax="100">+</p>
 
         <br>
+        
+        <button type="submit" class="scheme-button">Confirm Choice</button>
+   
 
 
     </body>
