--- a/static/styles.css
+++ b/static/styles.css
@@ -134,7 +134,7 @@ input {
     left: 20px;
     font-size: 45px;
     position: absolute;
-    background-color: #ccc;
+    background-color: rgb(187, 187, 187);
 }
 
 
