fixed admin and added comments to other pages

--- a/templates/accessibility.html
+++ b/templates/accessibility.html
@@ -18,7 +18,7 @@
         <p></p>
         <p></p>
 
-        <p>-<input type="range" aria-valuemin="0" aria-valuemax="100">+</p>
+        <p>-<input type="range" aria-valuemin="0" aria-valuemax="100">+</p> <!--This is used to chnage the zoom of the webpage-->
 
         <br>
         
