Changed all text to arial

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,7 @@
 /* For general use */
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: Arial;
     margin: 0px;
     padding: 0px;
     font-size: 30px;
