--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -4,28 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToKa Fitness - About Us</title>
+    <title>GibJohn Tutoring - About Us</title>
 
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 
 <body class="screen-center" style="background-color: rgb(187, 187, 187);">
-    <div
-        style="padding-left: 50px; padding-right: 50px; display: flex; flex-direction: column; align-items: center; text-align: center;">
-        <h1>
-            ToKa Fitness - About Us
-        </h1>
-        <h2>
-            The fitness center that you can trust
-        </h2>
-        <p>
-            ToKa Fitness is a fitness center that has been established since 2010. We have been serving our customers
-            for more than 10 years. We have a lot of experience in helping our customers to achieve their fitness goals.
-        </p>
-        <p>
-            With professional trainers and complete facilities, we are confident that our customers will get the best
-            service from us. To get more information about our services, please get in touch with us.
-        </p>
+
+    <h1>About Us</h1>
+
+    <div class="about_us">
+
+        <h2>    GibJohn Tutoring Is The Most Immersive Learning Service</h2>
+
+        <p>GibJohn Tutoring provides effective teaching that will guarentee all learners to reach their goals.</p>
+
+        <p>GibJohn Tutoring uses highly educated and rated tutors to provide learners witht the best teaching.</p>
+
+        <br>
+
+        <p>Subjects Taught:</p>
+
+        <p>- English</p>
+        <p>- Maths</p>
+        <p>- Chemistry</p>
+        <p>- Physics</p>
+        <p>- Biology</p>
+   
+
     </div>
 </body>
 
@@ -39,7 +45,7 @@ action="/logout"
 name="logout"> <!--This is a form that is used to log out a user, as well as clearing session variables-->
 
 
-<button style="font-size: 30px;" type="submit">Go Back</button>
+<button class="about_us_btn" type="submit">Go Back</button>
 
 </form>
 
