--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -19,7 +19,7 @@
 
         <p>GibJohn Tutoring provides effective teaching that will guarentee all learners to reach their goals.</p>
 
-        <p>GibJohn Tutoring uses highly educated and rated tutors to provide learners witht the best teaching.</p>
+        <p>GibJohn Tutoring uses highly educated and rated tutors to provide learners with the best teaching.</p>
 
         <br>
 
