Added new files

--- a/templates/home_learner.html
+++ b/templates/home_learner.html
@@ -11,8 +11,15 @@
     </head>
 
     <body class="screen-center" style="background-color: rgb(187, 187, 187);">
-        
+
         <h1>Main Page</h1>
+
+
+        <form
+        action="/update-learner"
+
+
+
 
 
         
