--- a/templates/home_learner.html
+++ b/templates/home_learner.html
@@ -4,7 +4,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Main Page</title>
+        <title>Home Page</title>
 
         <link rel="stylesheet" href="/static/styles.css">
 
@@ -12,7 +12,7 @@
 
     <body class="screen-center" style="background-color: rgb(187, 187, 187);">
 
-        <h1 class="heading">Main Page</h1>
+        <h1 class="heading">Home Page</h1>
 
 
         <form
