Added a heading to the admin page

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -12,6 +12,9 @@
 
     <body style="text-align: center; background-color: rgb(187, 187, 187);">
 
+
+        <h1 class="heading">Admin</h1>
+
         <h3>Tutors</h3>
 
         {% for user in tutors %} <!--A loop used to extract all values in a database-->
