--- a/templates/admin.html
+++ b/templates/admin.html
@@ -13,7 +13,7 @@
     <body style="text-align: center; background-color: rgb(187, 187, 187);">
 
 
-        <h1 class="heading">Admin</h1>
+        <h1>Admin</h1>
 
         <h3>Tutors</h3>
 
