Fixed navigation menu

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,13 @@
     <div style="display: flex;">
         <form 
         action="/aboutus"> <!--This will take the user to the About Us page-->
-        <button class="homebutton" style="font-size: 30px;" type="submit">About Us</button>
+        <button class="homebutton" style="font-size: 30px; left:1000px; position: fixed;" type="submit">About Us</button>
 
         </form>
 
         <form
         action="/contactus"> <!--This will take the user ot the Contact Us page-->
-        <button class="homebutton" style="font-size: 30px;" type="submit">Contact Us</button>    
+        <button class="homebutton" style="font-size: 30px; right:1000px; position: fixed;" type="submit">Contact Us</button>    
     
         </form>
 
