Ajusted database and fixed styles for log out button on multiple pages

--- a/templates/inactive.html
+++ b/templates/inactive.html
@@ -28,7 +28,7 @@
     name="logout"> <!--This is a form that is used to log out a user, as well as clearing session variables-->
 
 
-    <button style="font-size: 30px;" type="submit">Log Out</button>
+    <button class="logout" type="submit">Log Out</button>
 
     </form>
 
