--- a/templates/home_tutor.html
+++ b/templates/home_tutor.html
@@ -55,7 +55,7 @@
 
 
         <form
-        action=""
+        action="/resources"
         class="resources_btn"> <!--Needs a route to go to-->
     
         <button class="main_btns" type="submit">View Resources</button>
