Added update function in User's Account and styled the form

--- a/templates/update_tutor.html
+++ b/templates/update_tutor.html
@@ -4,7 +4,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Update Page</title>
+        <title>Your Account</title>
 
         <link rel="stylesheet" href="/static/styles.css">
 
@@ -12,25 +12,28 @@
 
     <body class="screen-center" style="background-color: rgb(187, 187, 187);">
 
-        <div class="heading">
-            <h1>Update Page</h1>
-        </div>
+    <h1 class="heading">Your Account</h1>
+        
 
+    <h3 style="left:20px; top:20%; position:absolute">Change Account Details</h3>
 
-<form action="/update-tutor"
+<form action="/new-tutor"
     method="post"
-    name="update"> <!--This is a form that is used to update a user's account information-->
+    name="update"
+    class="card"
+    style="left:50px; top:30%; position:absolute;"> <!--This is a form that is used to update a user's account information-->
 
     <input type="hidden" name="ID" value="{{ ID }}"> <!--This is used to send the user's ID to a route that will be used to update the correct user's account information-->
 
     <input style="font-size: 35px;" type="text" name="Username" placeholder="New Username" autofocus autocomplete="off"> 
-    <input style="font-size: 35px;" type="password" name="Password" placeholder="New Password" autofocus autocomplete="off"> 
+    <input style="font-size: 35px;" type="password" name="Password" placeholder="New Password" autofocus autocomplete="off">
+    <input style="font-size: 35px;" type="password" name="Re-enter_Password" placeholder="Re-enter Password" autofocus autocomplete="off"> 
     <input style="font-size: 35px;" type="email" name="Email" placeholder="New Email" autofocus autocomplete="off"> 
     <input style="font-size: 35px;" type="text" name="Name" placeholder="New Name" autofocus autocomplete="off">
 
     <br>
 
-    <button style="font-size: 30px;" type="submit">Update</button>
+    <button class="update" type="submit">Update</button>
 
 
     </form>
