--- a/static/styles.css
+++ b/static/styles.css
@@ -311,3 +311,21 @@ input {
     border-radius: 10px;
     cursor: pointer;
 }
+
+
+/*This is for the update feature in the User's Account page*/
+
+.update {
+    font-size: 30px; 
+    border:3px solid black; 
+    border-radius: 10px;
+    background: 0;
+}
+
+.update:hover {
+    font-size: 30px; 
+    border:3px solid black; 
+    border-radius: 10px;
+    background: 0;
+    cursor: pointer;
+}
