--- a/templates/update_learner.html
+++ b/templates/update_learner.html
@@ -38,6 +38,25 @@
 
     </form>
 
+
+    <form
+    action="/home-learner"
+    name="back"
+    method="post"> <!--This is used to take the user back to the home page-->
+    
+    <!--This is used to pass the user's information to the home page, so that they are re-logged in-->
+
+    {% for user in users %}
+
+    <input name="Username" type="hidden" value="{{ user.Username }}">
+    <input name="Password" type="hidden" value="{{ user.Password }}">
+
+    {% endfor %}
+
+    <button class="goback_black" type="submit">Go Back</button>
+    
+    </form>
+
 </body>
 
 </html>
