--- a/templates/update_tutor.html
+++ b/templates/update_tutor.html
@@ -35,7 +35,25 @@
 
     <button class="update" type="submit">Update</button>
 
+    
+    </form>
 
+
+    <form
+    action="/home-tutor"
+    name="back"> <!--This is used to take the user back to the home page-->
+    
+    <!--This is used to pass the user's information to the home page, so that they are re-logged in-->
+
+    {% for user in users %}
+
+    <input name="Username" type="hidden" value="{{ user.Username }}">
+    <input name="Password" type="hidden" value="{{ user.Password }}">
+
+    {% endfor %}
+
+    <button class="goback_black" type="submit">Go Back</button>
+    
     </form>
 
 </body>
