Fixed position for button

--- a/templates/update_learner.html
+++ b/templates/update_learner.html
@@ -53,7 +53,7 @@
 
     {% endfor %}
 
-    <button class="goback_black" type="submit">Go Back</button>
+    <button class="goback_black" style="bottom: 20%; position: fixed;" type="submit">Go Back</button>
     
     </form>
 
