--- a/templates/update_tutor.html
+++ b/templates/update_tutor.html
@@ -52,7 +52,7 @@
 
     {% endfor %}
 
-    <button class="goback_black" type="submit">Go Back</button>
+    <button class="goback_black" style="bottom: 20%; position: fixed;" type="submit">Go Back</button>
     
     </form>
 
