Partially cretaed and styles classes/schedule page

--- a/templates/classes.html
+++ b/templates/classes.html
@@ -10,10 +10,64 @@
 
     </head>
 
-    <body style="background-color: rgb(187, 187, 187);">
+    <body class="screen-center" style="background-color: rgb(187, 187, 187);">
     
+        <h1 class="heading">Classes/Schedule</h1>
 
-        
+        <!--This is a tables used for the classes as a timetable-->
+
+        <table class="classes_table">
+            <tr>
+                <th>English</th>
+                <th>Maths</th>
+                <th>Physics</th>
+                <th>Chemistry</th>
+                <th>Biology</th>
+            </tr>
+
+            <tr>
+                <td>Lesson 1</td>
+                <td>Lesson 1</td>
+                <td>Lesson 1</td>
+                <td>Lesson 1</td>
+                <td>Lesson 1</td>
+            </tr>
+
+            <tr>
+                <td>Lesson 2</td>
+                <td>Lesson 2</td>
+                <td>Lesson 2</td>
+                <td>Lesson 2</td>
+                <td>Lesson 2</td>
+            </tr>
+
+            <tr>
+                <td>Lesson 3</td>
+                <td>Lesson 3</td>
+                <td>Lesson 3</td>
+                <td>Lesson 3</td>
+                <td>Lesson 3</td>
+            </tr>
+
+            <tr>
+                <td>Lesson 4</td>
+                <td>Lesson 4</td>
+                <td>Lesson 4</td>
+                <td>Lesson 4</td>
+                <td>Lesson 4</td>
+            </tr>
+
+            <tr>
+                <td>Lesson 5</td>
+                <td>Lesson 5</td>
+                <td>Lesson 5</td>
+                <td>Lesson 5</td>
+                <td>Lesson 5</td>
+            </tr>
+
+        </table>
+
+ 
     </body>
 
 
