--- a/templates/resources.html
+++ b/templates/resources.html
@@ -20,7 +20,7 @@
 
         <h2>Enter a Subject or Key Words/Phrases to Search:</h2>
 
-    <form class="card" action="/search" method="post" name="reasources">
+    <form class="card" action="/search" method="post" name="resources">
 
         <input type="text" name="search" style="font-style: italic; font-size: 35px;" placeholder="Search Here" autofocus autocomplete="off"> <!--This is the search input-->
 
