--- a/static/styles.css
+++ b/static/styles.css
@@ -157,6 +157,13 @@ input {
 }
 
 
+.classes_table {
+    padding: 35px;
+    border-spacing: 35px;
+    border: 3px solid black;
+}
+
+
 /* For 'Go Back' buttons */
 
 .goback_black {
