--- a/templates/accessibility.html
+++ b/templates/accessibility.html
@@ -20,7 +20,7 @@
         <p></p>
         <p></p>
 
-        <div style="top: 25%; left: 45%; position: fixed;">
+        <div style="top: 25%; left: 45%; position: fixed; accent-color: black;">
 
         <p>- 0<input type="range" aria-valuemin="0" aria-valuemax="100">100 +</p> <!--This is used to change the zoom of the webpage-->
 
