--- a/templates/accessibility.html
+++ b/templates/accessibility.html
@@ -22,7 +22,7 @@
 
         <div style="top: 25%; left: 45%; position: fixed; accent-color: black;">
 
-        <p>- 0<input type="range" aria-valuemin="0" aria-valuemax="100">100 +</p> <!--This is used to change the zoom of the webpage-->
+        <p>-<input type="range" aria-valuemin="0" aria-valuemax="100">+</p> <!--This is used to change the zoom of the webpage-->
 
         </div>
 
