--- a/templates/update_learner.html
+++ b/templates/update_learner.html
@@ -39,6 +39,44 @@
     </form>
 
 
+    <!--This is a table containing the user's upcoming classes-->
+
+    <h3 class="heading" style="border: 3px solid black;">You Upcoming Classes:</h3>
+
+    <table>
+        <tr style="background-color: black;">
+            <th>Class</th>
+            <th>Date and Time</th>
+        </tr>
+
+        <tr style="background-color: purple;">
+            <td>Biology</td>
+            <td>11:15 at 20/04/24</td>
+        </tr>
+
+        <tr style="background-color: green;">
+            <td>Maths</td>
+            <td>11:45 at 30/11/24</td>
+        </tr>
+
+        <tr style="background-color: purple;">
+            <td>Physics</td>
+            <td>11:00 at 15/02/24</td>
+        </tr>
+
+        <tr style="background-color: green;">
+            <td>English</td>
+            <td>Next Monday at 09:30</td>
+        </tr>
+
+
+
+
+    </table>
+
+
+
+
     <form
     action="/home-learner"
     name="back"> <!--This is used to take the user back to the home page-->
