Fixed positioning for table and headings

--- a/templates/update_tutor.html
+++ b/templates/update_tutor.html
@@ -41,9 +41,9 @@
 
         <!--This is a table containing the user's upcoming classes-->
 
-        <h3 class="heading" style="border: 3px solid black;">You Upcoming Classes:</h3>
+        <h3 class="heading" style="border: 3px solid black; top: 15%; padding: 10px">Your Upcoming Classes:</h3>
 
-        <table>
+        <table style="top: 25%; position: fixed;">
             <tr style="background-color: black;">
                 <th>Class</th>
                 <th>Date and Time</th>
