--- a/templates/update_learner.html
+++ b/templates/update_learner.html
@@ -41,9 +41,9 @@
 
     <!--This is a table containing the user's upcoming classes-->
 
-    <h3 class="heading" style="border: 3px solid black;">You Upcoming Classes:</h3>
+    <h3 class="heading" style="border: 3px solid black; top: 15%; padding: 10px">Your Upcoming Classes:</h3>
 
-    <table>
+    <table style="top: 25%; position: fixed;">
         <tr style="background-color: black;">
             <th>Class</th>
             <th>Date and Time</th>
@@ -81,7 +81,7 @@
     action="/home-learner"
     name="back"> <!--This is used to take the user back to the home page-->
 
-    <button class="goback_black" style="bottom: 20%; position: fixed;" type="submit">Go Back</button>
+    <button class="goback_black" style="bottom: 10%; left: 47%; position: fixed;" type="submit">Go Back</button>
     
     </form>
 
