When a user goes to their account, their name will appear on the top

--- a/templates/update_learner.html
+++ b/templates/update_learner.html
@@ -12,7 +12,7 @@
 
     <body class="screen-center" style="background-color: rgb(187, 187, 187);">
 
-    <h1 class="heading">Your Account</h1>
+    <h1 class="heading">{{ name }}'s Account</h1>
         
 
     <h3 style="left:20px; top:20%; position:absolute">Change Account Details</h3>
