--- a/templates/update_tutor.html
+++ b/templates/update_tutor.html
@@ -12,7 +12,7 @@
 
     <body class="screen-center" style="background-color: rgb(187, 187, 187);">
 
-    <h1 class="heading">Your Account</h1>
+    <h1 class="heading">{{ name }}'s Account</h1>
         
 
     <h3 style="left:20px; top:20%; position:absolute">Change Account Details</h3>
@@ -83,7 +83,7 @@
     action="/home-tutor"
     name="back"> <!--This is used to take the user back to the home page-->
 
-    <button class="goback_black" style="bottom: 20%; position: fixed;" type="submit">Go Back</button>
+    <button class="goback_black" style="bottom: 10%; left: 47%; position: fixed;" type="submit">Go Back</button>
     
     </form>
 
