Added rewards page and button for user's account page

--- a/templates/update_learner.html
+++ b/templates/update_learner.html
@@ -75,6 +75,17 @@
     </table>
 
 
+    <div style="border: 3px solid black;right: 10%; top: 20%; position: fixed; padding: 15px;">
+    <p>You Have <p style="color: red;">27</p> Availiable Points</p>
+
+    <form
+    action="/rewards">
+
+    <button type="submit">View Your Badges</button>
+
+    </form>
+
+    </div>
 
 
     <form
