Started design of rewards button

--- a/templates/update_learner.html
+++ b/templates/update_learner.html
@@ -78,14 +78,16 @@
     <div style="border: 3px solid black;right: 10%; top: 20%; position: fixed; padding: 15px;">
     <p>You Have <p style="color: red;">27</p> Availiable Points</p>
 
-    <form
-    action="/rewards">
+    </div>
 
-    <button type="submit">View Your Badges</button>
+
+    <form
+    action="/rewards"
+    style="right: 10%; top: 30%; position: fixed; padding: 15px;">
+
+    <button style="border: 3px solid black; padding: 50px; font-size: 30px;" type="submit">View Your Badges</button>
 
     </form>
-
-    </div>
 
 
     <form
