--- a/templates/update_learner.html
+++ b/templates/update_learner.html
@@ -83,7 +83,7 @@
 
     <form
     action="/rewards"
-    style="right: 10%; top: 30%; position: fixed; padding: 15px;">
+    style="right: 10%; top: 30%; position: fixed; padding: 15px;"> <!--This is used to take the learner to the rewards page-->
 
     <button style="border: 3px solid black; padding: 50px; font-size: 30px;" type="submit">View Your Badges</button>
 
