--- a/templates/rewards.html
+++ b/templates/rewards.html
@@ -14,6 +14,15 @@
 
     <i>You Do Not Own Any Badges Yet :/</i>
 
+
+    <form
+    action="/home-learner"
+    name="back"> <!--This is used to take the user back to the home page-->
+
+    <button class="goback_black" style="bottom: 10%; left: 47%; position: fixed;" type="submit">Go Back</button>
+    
+    </form>
+
 </body>
 
 </html>
