--- a/templates/update_learner.html
+++ b/templates/update_learner.html
@@ -75,7 +75,7 @@
     </table>
 
 
-    <div style="border: 3px solid black;right: 10%; top: 20%; position: fixed; padding: 15px;">
+    <div style="border: 3px solid black;right: 10%; top: 25%; position: fixed; padding: 15px;">
     <p>You Have <p style="color: red;">27</p> Availiable Points</p>
 
     </div>
@@ -83,9 +83,9 @@
 
     <form
     action="/rewards"
-    style="right: 10%; top: 30%; position: fixed; padding: 15px;"> <!--This is used to take the learner to the rewards page-->
+    style="right: 7%; top: 50%; position: fixed; padding: 15px;"> <!--This is used to take the learner to the rewards page-->
 
-    <button style="border: 3px solid black; padding: 50px; font-size: 30px;" type="submit">View Your Badges</button>
+    <button class="badges_btn" type="submit">View Your Badges</button>
 
     </form>
 
