Fixed typo and updated database

--- a/templates/update_learner.html
+++ b/templates/update_learner.html
@@ -17,7 +17,7 @@
 
     <h3 style="left:20px; top:20%; position:absolute">Change Account Details</h3>
 
-<form action="/new-learner"
+<form action="/update-learner"
     method="post"
     name="update"
     class="card"
