--- a/templates/update_tutor.html
+++ b/templates/update_tutor.html
@@ -17,7 +17,7 @@
 
     <h3 style="left:20px; top:20%; position:absolute">Change Account Details</h3>
 
-<form action="/new-tutor"
+<form action="/update-tutor"
     method="post"
     name="update"
     class="card"
