--- a/templates/reset_learner.html
+++ b/templates/reset_learner.html
@@ -35,7 +35,7 @@
     <p></p>
     <p></p>
 
-    <button style="font-size: 30px;" type="submit">Update</button>
+    <button class="goback_black" style="font-size: 30px;" type="submit">Update</button>
 
     </form>
 
