Replaced the search feature with a drop-down

--- a/templates/resources.html
+++ b/templates/resources.html
@@ -22,7 +22,13 @@
 
     <form class="card" action="/search" method="post" name="resources">
 
-        <input type="text" name="search" style="font-style: italic; font-size: 35px;" placeholder="Search Here" autofocus autocomplete="off"> <!--This is the search input-->
+        <select class="card" style="text-align: center; font-size: 30px;">
+            <option value="English">English</option>
+            <option value="Maths">Maths</option>
+            <option value="Physics">Physics</option>
+            <option value="Chemistry">Chemistry</option>
+            <option value="Biology">Biology</option>
+        </select>
 
         <button class="goback_white" type="submit">Search</button>
 
