Failed to fix error after search in resources page

--- a/templates/resources.html
+++ b/templates/resources.html
@@ -11,18 +11,18 @@
     </head>
 
 
-<body style= "background-color: rgb(187, 187, 187);">
+<body style="background-color: rgb(187, 187, 187);">
 
 
 <div class="screen-center">
 
         <h1 class="heading">Resources</h1>
 
-        <h2>Enter a Subject or Key Words/Phrases to Search:</h2>
+        <h2>Select a Subject to Search:</h2>
 
     <form class="card" action="/search" method="post" name="resources">
 
-        <select class="card" style="text-align: center; font-size: 30px;">
+        <select autofocus name="class_type" id="class_type" class="card" style="text-align: center; font-size: 30px;"> <!--A drop-down menu for the user-->
             <option value="English">English</option>
             <option value="Maths">Maths</option>
             <option value="Physics">Physics</option>
