--- a/templates/results.html
+++ b/templates/results.html
@@ -11,20 +11,20 @@
     </head>
 
 
-<body style= "background-color: rgb(187, 187, 187);">
+<body style="background-color: rgb(187, 187, 187);">
 
 
 <div class="screen-center">
 
-    <h1 class="heading">Results</h1>
+    <h1 class="heading">Search Results</h1>
 
-    <i>Results Here</i>
+    <p>{{ search }}</p>
 
     <br>
 
-    <form
-action="/logout"
-name="logout"> <!--This is a form that is used to log out a user, as well as clearing session variables-->
+<form
+action="/resources"
+name="go back"> <!--This is a form that is used to take the user back to the resources page-->
 
 
 <button class="goback_black" type="submit">Go Back</button>
